[gd_scene load_steps=28 format=3 uid="uid://bkvdcld6sp21y"]

[ext_resource type="Resource" uid="uid://p2hirb0k4dcr" path="res://inventory/player_inventory.tres" id="2_a6vic"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_nlo8y"]
[ext_resource type="Texture2D" uid="uid://cjy4txhsypxt2" path="res://assets/idle_strip9.png" id="3_gdm4o"]
[ext_resource type="PackedScene" uid="uid://usmt8e8tagoy" path="res://scenes/synchronizer/input_synchronizer.tscn" id="3_je07h"]
[ext_resource type="Texture2D" uid="uid://4vf3owus56p7" path="res://assets/walk_strip8.png" id="4_7bqrl"]
[ext_resource type="PackedScene" uid="uid://bx6qi23y6hcqh" path="res://inventory/inv_ui.tscn" id="6_jfj3o"]
[ext_resource type="PackedScene" uid="uid://cy311xttot30n" path="res://scenes/hotbar/hotbar.tscn" id="7_qx86f"]
[ext_resource type="PackedScene" uid="uid://bmf6aj2usll38" path="res://scenes/requests/requests.tscn" id="8_iudjv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s5pf6"]
radius = 11.0

[sub_resource type="AtlasTexture" id="AtlasTexture_lpxjv"]
atlas = ExtResource("3_gdm4o")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_253v7"]
atlas = ExtResource("3_gdm4o")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyfv3"]
atlas = ExtResource("3_gdm4o")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_75k4k"]
atlas = ExtResource("3_gdm4o")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g534k"]
atlas = ExtResource("3_gdm4o")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4cln"]
atlas = ExtResource("3_gdm4o")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppbg2"]
atlas = ExtResource("3_gdm4o")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjfqv"]
atlas = ExtResource("3_gdm4o")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08wvc"]
atlas = ExtResource("3_gdm4o")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ygjm"]
atlas = ExtResource("4_7bqrl")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox518"]
atlas = ExtResource("4_7bqrl")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6eii"]
atlas = ExtResource("4_7bqrl")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_61w0u"]
atlas = ExtResource("4_7bqrl")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aqcx"]
atlas = ExtResource("4_7bqrl")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jg3e"]
atlas = ExtResource("4_7bqrl")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0if1r"]
atlas = ExtResource("4_7bqrl")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mkuk"]
atlas = ExtResource("4_7bqrl")
region = Rect2(672, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3sxfv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpxjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_253v7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyfv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75k4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g534k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4cln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppbg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjfqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08wvc")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ygjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox518")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6eii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61w0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aqcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jg3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0if1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mkuk")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
motion_mode = 1
script = ExtResource("2_nlo8y")
inv = ExtResource("2_a6vic")

[node name="Label" type="Label" parent="."]
offset_left = -58.0
offset_top = -93.0
offset_right = 56.0
offset_bottom = -70.0
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
shape = SubResource("CapsuleShape2D_s5pf6")

[node name="InputSynchronizer" parent="." instance=ExtResource("3_je07h")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_3sxfv")
animation = &"idle"

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(10, 8.46154)

[node name="SpritePosition" type="Marker2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true

[node name="Inv_UI" parent="." instance=ExtResource("6_jfj3o")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -22.0
offset_top = -69.0
offset_right = 22.0
offset_bottom = -25.0
grow_horizontal = 1
grow_vertical = 1

[node name="HotbarInterface" type="CanvasLayer" parent="."]

[node name="Hotbar" parent="HotbarInterface" instance=ExtResource("7_qx86f")]
anchor_left = 0.473
anchor_top = 0.986
anchor_right = 0.544
anchor_bottom = 1.0
offset_left = -89.896
offset_top = -53.9281
offset_right = -82.688
offset_bottom = -45.0001
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(3, 3)

[node name="Requests" parent="HotbarInterface" instance=ExtResource("8_iudjv")]
anchors_preset = -1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -116.0
offset_top = 1.0
offset_right = -116.0
offset_bottom = 1.0
scale = Vector2(1.5, 1.5)
